--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # requirements.txt
 flask==2.0.1
-flask-sqlalchemy==2.5.1
+SQLAlchemy==1.3.24
 flask-migrate==2.7.0
 flask-jwt-extended==4.3.1
 flask-cors==3.0.10
