--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,7 @@ email-validator==1.1.3
 pytest==6.2.5
 gunicorn==20.1.0
 flask_caching==2.3.0
+Flask-SQLAlchemy==3.1.1
+PyMySQL==1.1.0
+mysqlclient==2.2.0
 
